Content updates; centering fixes for Chrome Fix index page content being aligned left in Chrome. Use the mobile layout by default when printing resume. Update GPA and job position descriptions in resume text.

--- a/index.css
+++ b/index.css
@@ -135,6 +135,7 @@ body {
 	height: 128px;
 	background: rgba(0, 0, 0, 0.25);
 	text-align: center;
+	text-align-last: center;
 	margin-top: 40px;
 }
 
